# django-simple-pwa

./: MANIFEST.in  README.rst  setup.cfg
pwa/: defaults.py  models.py  views.py
pwa/static/js/: animated-background.js  jquery-bundle.js  jquery.collapser.js  scripts.js
pwa/static/pwa/css/: back-to-top.css  smooth-scrow.css
pwa/static/pwa/js/: angular.js  app.js  back-to-top.js  bg_particles-control.js  bg_particles.js  serviceworker.js  truncate.js
pwa/templates/pwa/: metadata.html  offline.html  pwa_offline.html
